# sat-api

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  openapi.json
migrations/: 0001_create_users.sql  0002_create_credentials.sql  0003_create_links.sql  0004_create_crawls.sql  0005_create_invoices.sql  0006_create_files.sql  0007_add_file_ids_to_invoices.sql  0008_add_parse_fields_to_invoices.sql  0009_create_taxpayers.sql  0010_add_taxpayer_ids_to_invoices.sql  0011_create_invoice_items.sql  0012_create_invoice_related_documents.sql  0013_create_invoice_payments.sql  0014_invoice_type_sat_codes.sql  20240101000000_init.sql  20240102000000_create_users.sql  20240103000000_create_credentials.sql  20240104000000_add_credential_status.sql  20240105000000_rename_password_column.sql  20240106000000_create_crawls.sql  20240107000000_drop_credentials_unique_constraint.sql  20260412000000_create_links.sql  20260412000001_migrate_crawls_to_link_id.sql  20260412000002_create_invoices.sql  20260412000003_rename_rfc_to_taxpayer_id.sql  20260412234101_invoices_unique_uuid_link_id.sql  20260413000442_links_unique_user_taxpayer_id.sql  20260413003015_remove_cascade_constraints.sql  20260413003016_add_indexes.sql
src/: crypto.rs  error.rs  extractors.rs  main.rs  reactor.rs  storage.rs
src/crawlers/: mod.rs
src/repositories/: crawl.rs  credential.rs  files.rs  invoice.rs  invoice_item.rs  invoice_payment.rs  invoice_related_document.rs  link.rs  mod.rs  taxpayer.rs  user.rs
src/routes/: auth.rs  crawl.rs  credential.rs  health.rs  invoice.rs  invoice_payment.rs  link.rs  mod.rs  taxpayer.rs
src/services/: auth.rs  crawl.rs  credential.rs  invoice.rs  invoice_payment.rs  link.rs  mod.rs  taxpayer.rs
