[package]
name = "sat-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sat-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
satcrawler = { git = "https://github.com/carlosforcss/sat-cli", package = "satcrawler" }
aes-gcm = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

[profile.dev.package.chromiumoxide_cdp]
debug = 0
